doc: add table of contents

--- a/app/color/@dev/page.mdx
+++ b/app/color/@dev/page.mdx
@@ -1,4 +1,8 @@
 import React from 'react';
+import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 # Color System
 
