--- a/app/color/@spec/page.mdx
+++ b/app/color/@spec/page.mdx
@@ -1,3 +1,7 @@
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
+
 # Color System
 
 The Parity color system overrides TailwindCSS default colors to match brand identity and ensure a consistent user experience. Below are all system color tokens, grouped by category, with their values for both light and dark schemes.
