--- a/app/corner-indicator/@dev/page.mdx
+++ b/app/corner-indicator/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/corner-indicator';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic corner indicator
 
