--- a/app/dot/@dev/page.mdx
+++ b/app/dot/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/dot';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Sizes
 
