--- a/app/file-input/@dev/page.mdx
+++ b/app/file-input/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/file-input';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Default
 
