--- a/app/number-input/@dev/page.mdx
+++ b/app/number-input/@dev/page.mdx
@@ -1,6 +1,9 @@
 import * as Demo from '@public/demo/number-input';
 import { CircleDollarSign } from 'lucide-react';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic
 
