--- a/app/pagination/@dev/page.mdx
+++ b/app/pagination/@dev/page.mdx
@@ -1,6 +1,9 @@
 import * as Demo from '@public/demo/pagination';
 import Link from 'next/link';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic
 
