--- a/app/search-input/@dev/page.mdx
+++ b/app/search-input/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/search-input';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic
 
@@ -139,7 +142,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Basic (Alternative)
 
-<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme='alternative'>
   <Demo.BasicSearchInput theme='alternative' />
 </CodePreview>
 <CodePreview paths={['search-input', 'BasicSearchInputClearableSearchButtonAlternative']}>
@@ -154,7 +157,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Auxiliary (Alternative)
 
-<CodePreview paths={['search-input', 'AuxiliarySearchInput']} theme="alternative">
+<CodePreview paths={['search-input', 'AuxiliarySearchInput']} theme='alternative'>
   <Demo.AuxiliarySearchInput theme='alternative' />
 </CodePreview>
 <CodePreview paths={['search-input', 'AuxiliarySearchInputClearableSearchButton']}>
@@ -169,40 +172,40 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## ShortCut Indicator (Alternative)
 
-<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme='alternative'>
   <Demo.BasicSearchInput shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme='alternative'>
   <Demo.BasicSearchInput isClearable shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme='alternative'>
   <Demo.BasicSearchInput isClearable shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme='alternative'>
   <Demo.BasicSearchInput isPending shortCut='Shift + K' theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInput']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInput']} theme='alternative'>
   <Demo.BasicSearchInput isPending shortCut='Shift + K' theme='alternative' />
 </CodePreview>
 
 ## States (Alternative)
 
-<CodePreview paths={['search-input', 'BasicSearchInputErrorClearable']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInputErrorClearable']} theme='alternative'>
   <Demo.BasicSearchInputErrorClearable theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputErrorShortCut']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInputErrorShortCut']} theme='alternative'>
   <Demo.BasicSearchInputErrorShortCut theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputDisabledShortCut']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInputDisabledShortCut']} theme='alternative'>
   <Demo.BasicSearchInputDisabledShortCut theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputDisabledSearchButton']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInputDisabledSearchButton']} theme='alternative'>
   <Demo.BasicSearchInputDisabledSearchButton theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputReadOnlySearchButton']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInputReadOnlySearchButton']} theme='alternative'>
   <Demo.BasicSearchInputReadOnlySearchButton theme='alternative' />
 </CodePreview>
-<CodePreview paths={['search-input', 'BasicSearchInputReadOnlyPendingShortCut']} theme="alternative">
+<CodePreview paths={['search-input', 'BasicSearchInputReadOnlyPendingShortCut']} theme='alternative'>
   <Demo.BasicSearchInputReadOnlyPendingShortCut theme='alternative' />
 </CodePreview>
 
