--- a/app/switch/@spec/page.mdx
+++ b/app/switch/@spec/page.mdx
@@ -3,6 +3,9 @@ import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import * as Demo from '@public/demo/switch';
 import imageSrc from '@public/images/switch';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 :::callout[note]
 An element that toggles between two binary options.
