--- a/app/tabs/@dev/page.mdx
+++ b/app/tabs/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/tabs';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 <CodePreview paths={['tabs', 'TabsWithChildren']}>
   <Demo.TabsWithChildren />
@@ -16,6 +19,7 @@ import CodePreview from '@components/showcase/CodePreview';
 ## Basic
 
 {' '}
+
 <CodePreview paths={['tabs', 'TabsAlternative']} theme='alternative'>
   <Demo.TabsAlternative />
 </CodePreview>
