--- a/app/tag/@spec/page.mdx
+++ b/app/tag/@spec/page.mdx
@@ -3,6 +3,9 @@ import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import * as Demo from '@public/demo/tag';
 import imageSrc from '@public/images/tag';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 :::callout[note]
 An element used for representing user-authored content.
