--- a/app/text-input/@dev/page.mdx
+++ b/app/text-input/@dev/page.mdx
@@ -1,6 +1,8 @@
 import * as Demo from '@public/demo/text-input';
-import { Box } from 'lucide-react';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic
 
