--- a/app/text-input/@spec/page.mdx
+++ b/app/text-input/@spec/page.mdx
@@ -3,6 +3,9 @@ import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import * as Demo from '@public/demo/text-input';
 import imageSrc from '@public/images/text-input';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 :::callout[note]
 A basic input field for entering text.
