--- a/app/textarea/@dev/page.mdx
+++ b/app/textarea/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/textarea';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic
 
@@ -40,6 +43,7 @@ import CodePreview from '@components/showcase/CodePreview';
 ## Alternative
 
 {' '}
+
 <CodePreview paths={['textarea', 'BasicTextAreaAlternativeRows0Error']} theme='alternative'>
   <Demo.BasicTextAreaAlternativeRows0Error />
 </CodePreview>
