--- a/app/toast/@dev/page.mdx
+++ b/app/toast/@dev/page.mdx
@@ -1,6 +1,9 @@
 import * as Demo from '@public/demo/toast';
 import CodePreview from '@components/showcase/CodePreview';
 import { ToastContainer } from 'beta-parity-react/ui/Toast';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 {/* add container in your page you want to use toast */}
 {/* <ToastContainer limit={3} stacked={false} sortImportance={true}/> */}
