--- a/app/badge/@dev/page.mdx
+++ b/app/badge/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/badge';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Outlined (default)
 
