--- a/app/badge/@spec/page.mdx
+++ b/app/badge/@spec/page.mdx
@@ -2,6 +2,9 @@ import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import imageSrc from '@public/images/badge';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 :::callout[note]
 A component used to communicate status, count, or category with compact visual emphasis.
