--- a/app/button/@spec/page.mdx
+++ b/app/button/@spec/page.mdx
@@ -1,11 +1,15 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
-import Component from '@components/showcase/CodePreview';
 import imageSrc from '@public/images/button';
+import Component from '@components/showcase/CodePreview';
+import * as Demo from '@public/demo/button';
+import TableOfContents from '@components/doc/TableOfContents';
 
-:::callout[note]
+<TableOfContents />
+
+## Button
+
 An element that performs an action when clicked.
-:::
 
 <Image src={imageSrc.button} alt='button' />
 
