--- a/app/checkbox/@dev/page.mdx
+++ b/app/checkbox/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/checkbox';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 <CodePreview paths={['checkbox', 'BasicCheckbox']}>
   <Demo.BasicCheckbox />
