--- a/app/chip/@dev/page.mdx
+++ b/app/chip/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/chip';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Type Toggle
 
