--- a/app/chip/@spec/page.mdx
+++ b/app/chip/@spec/page.mdx
@@ -2,6 +2,9 @@ import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import * as Demo from '@public/demo/chip';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 :::callout[note]
 An interactive element used for triggering actions, making selections, or filtering content.
