--- a/app/email-input/@dev/page.mdx
+++ b/app/email-input/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/email-input';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic
 
