--- a/app/file-item/@dev/page.mdx
+++ b/app/file-item/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/file-item';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 <CodePreview paths={['file-item', 'BasicFileItem']}>
   <Demo.BasicFileItem />
