--- a/app/menu/@spec/page.mdx
+++ b/app/menu/@spec/page.mdx
@@ -1,8 +1,11 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
+import imageSrc from '@public/images/menu';
 import Component from '@components/showcase/CodePreview';
 import * as Demo from '@public/demo/menu';
-import imageSrc from '@public/images/menu';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 :::callout[note]
 A interactive popover interface that contains a list of options or other input controls, used in conjunction with select fields and action buttons.
