--- a/app/pinfield/@dev/page.mdx
+++ b/app/pinfield/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/pinfield';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic
 
