--- a/app/pinfield/@spec/page.mdx
+++ b/app/pinfield/@spec/page.mdx
@@ -2,6 +2,9 @@ import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import * as Demo from '@public/demo/pinfield';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 {/* Image => Image Example */}
 {/* Component => Component Example */}
