--- a/app/radio/@dev/page.mdx
+++ b/app/radio/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/radio';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic radio
 
