--- a/app/select/@spec/page.mdx
+++ b/app/select/@spec/page.mdx
@@ -2,6 +2,10 @@ import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImagePreview';
 import Component from '@components/showcase/CodePreview';
 import * as Demo from '@public/demo/select';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
+
 import imageSrc from '@public/images/select';
 
 :::callout[note]
