--- a/app/spinner/@dev/page.mdx
+++ b/app/spinner/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/spinner';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Variants
 
