--- a/app/switch/@dev/page.mdx
+++ b/app/switch/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/switch';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 <CodePreview paths={['switch', 'BasicSwitch']}>
   <Demo.BasicSwitch />
