--- a/app/table/@dev/page.mdx
+++ b/app/table/@dev/page.mdx
@@ -1,5 +1,8 @@
 import * as Demo from '@public/demo/table';
 import CodePreview from '@components/showcase/CodePreview';
+import TableOfContents from '@components/doc/TableOfContents';
+
+<TableOfContents />
 
 ## Basic Table
 
