doc: update headings

--- a/app/avatar/@spec/page.mdx
+++ b/app/avatar/@spec/page.mdx
@@ -174,7 +174,7 @@ For AvatarGroup:
 - **Spacing**: Customize the overlap between avatars
 - **Custom overflow**: Option to provide custom overflow indicator
 
-## 🎨 Design Tokens for Avatar
+## Design Tokens for Avatar
 
 | **Token**                                          | **Color for**               | **State/Meaning**                       | **CSS Selector(s)**                                  |
 | -------------------------------------------------- | --------------------------- | --------------------------------------- | ---------------------------------------------------- |
