--- a/app/badge/@spec/page.mdx
+++ b/app/badge/@spec/page.mdx
@@ -91,7 +91,7 @@ This component does not have states.
 
 <Image src={imageSrc.overflow} alt='overflow' />
 
-## 🎨 Design Tokens for Badge
+## Design Tokens for Badge
 
 | **Token**                                       | **Color for**               | **State/Meaning**          | **CSS Selector(s)**         |
 | ----------------------------------------------- | --------------------------- | -------------------------- | --------------------------- |
@@ -107,7 +107,7 @@ This component does not have states.
 
 > _Note: Replace `\<color\>` with supported color names: gray, red, green, yellow, blue, orange, cyan, violet, lime._
 
-## 🧩 Badge API Reference
+## Badge API Reference
 
 ### `<Badge />`
 
