--- a/app/breadcrumb/@spec/page.mdx
+++ b/app/breadcrumb/@spec/page.mdx
@@ -37,14 +37,14 @@ A component that organizes content into vertically stacked collapsible and expan
 
 {/* Options specification */}
 
-## 🎨 Design Tokens for Breadcrumb
+## Design Tokens for Breadcrumb
 
 | **Token**                                   | **Color for**               | **State/Meaning** | **CSS Selector(s)**                  |
 | ------------------------------------------- | --------------------------- | ----------------- | ------------------------------------ |
 | **--par-color-separator-breadcrumb**        | Breadcrumb separator        | Default/Enabled   | `.breadcrumb-item:not(:last-child)`  |
 | **--par-color-text-breadcrumb-item-active** | Active breadcrumb item text | Active/Selected   | `.breadcrumb-item.breadcrumb-active` |
 
-## 🧩 Breadcrumb API Reference
+## Breadcrumb API Reference
 
 ### `<Breadcrumb />`
 
