--- a/app/button/@spec/page.mdx
+++ b/app/button/@spec/page.mdx
@@ -137,7 +137,7 @@ An element that performs an action when clicked.
 
 <Image src={imageSrc.overflow} alt='overflow' />
 
-## 🎨 Design Tokens for Button
+## Design Tokens for Button
 
 | **Token**                                               | **Color for**     | **State/Meaning**                                                                                     | **CSS Selector(s)**          |
 | ------------------------------------------------------- | ----------------- | ----------------------------------------------------------------------------------------------------- | ---------------------------- |
@@ -147,7 +147,7 @@ An element that performs an action when clicked.
 
 > _Note: Replace `kind` with solid, outlined, ghost, glass; `color` with neutral, accent, adverse; `state` with enabled, hovered, pressed, disabled, pending as appropriate._
 
-## 🧩 Button API Reference
+## Button API Reference
 
 ### `<Button />`
 
