--- a/app/corner-indicator/@spec/page.mdx
+++ b/app/corner-indicator/@spec/page.mdx
@@ -71,7 +71,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for CornerIndicator
+## Design Tokens for CornerIndicator
 
 > All tokens are defined in `registry/src/components/CornerIndicator/variables.css`.
 
@@ -81,7 +81,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 CornerIndicator API Reference
+## CornerIndicator API Reference
 
 ### `<CornerIndicator />`
 
