--- a/app/date-picker/@spec/page.mdx
+++ b/app/date-picker/@spec/page.mdx
@@ -89,7 +89,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for DatePicker
+## Design Tokens for DatePicker
 
 | **Token**                                                   | **Color for**                   | **State/Meaning**            | **CSS Selector(s)**                                                                      |
 | ----------------------------------------------------------- | ------------------------------- | ---------------------------- | ---------------------------------------------------------------------------------------- |
@@ -131,7 +131,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 DatePicker API Reference
+## DatePicker API Reference
 
 ### `<DatePicker />`
 
