--- a/app/dot/@spec/page.mdx
+++ b/app/dot/@spec/page.mdx
@@ -59,7 +59,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | 2025-06-03 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Dot
+## Design Tokens for Dot
 
 | **Token**                           | **Color for**  | **State/Meaning** | **CSS Selector(s)** |
 | ----------------------------------- | -------------- | ----------------- | ------------------- |
@@ -75,7 +75,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Dot API Reference
+## Dot API Reference
 
 ### `<Dot />`
 
