--- a/app/file-input/@spec/page.mdx
+++ b/app/file-input/@spec/page.mdx
@@ -49,13 +49,13 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for FileInput
+## Design Tokens for FileInput
 
 > _Note: FileInput uses the same design tokens as the Input component. See Input documentation for available tokens._
 
 ---
 
-## 🧩 FileInput API Reference
+## FileInput API Reference
 
 ### `<FileInput />`
 
