--- a/app/file-item/@spec/page.mdx
+++ b/app/file-item/@spec/page.mdx
@@ -49,7 +49,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for FileItem
+## Design Tokens for FileItem
 
 | **Token**                         | **Color for**       | **State/Meaning** | **CSS Selector(s)**                |
 | --------------------------------- | ------------------- | ----------------- | ---------------------------------- |
@@ -62,7 +62,7 @@ _FileItem also inherits design tokens from the Input and Progress components. Fo
 
 ---
 
-## 🧩 FileItem API Reference
+## FileItem API Reference
 
 ### `<FileItem />`
 
