--- a/app/menu/@spec/page.mdx
+++ b/app/menu/@spec/page.mdx
@@ -243,7 +243,7 @@ Options applied to a menu affect all of its menu items.
 <Image src={imageSrc.position} alt='position' />
 <Image src={imageSrc.position2} alt='position2' />
 
-## 🎨 Design Tokens for Menu
+## Design Tokens for Menu
 
 | **Token**                                      | **Color for**        | **State/Meaning**     | **CSS Selector(s)**                                |
 | ---------------------------------------------- | -------------------- | --------------------- | -------------------------------------------------- |
@@ -263,7 +263,7 @@ Options applied to a menu affect all of its menu items.
 
 ---
 
-## 🧩 Menu API Reference
+## Menu API Reference
 
 ### `<Menu />`
 
