--- a/app/number-input/@spec/page.mdx
+++ b/app/number-input/@spec/page.mdx
@@ -76,7 +76,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for NumberInput
+## Design Tokens for NumberInput
 
 | **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                        |
 | ---------------------------------------- | ---------------------------- | ----------------- | -------------------------------------------------------------------------- |
@@ -105,7 +105,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 NumberInput API Reference
+## NumberInput API Reference
 
 ### `<NumberInput />`
 
