--- a/app/pagination/@spec/page.mdx
+++ b/app/pagination/@spec/page.mdx
@@ -64,7 +64,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | 2025-06-03 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Pagination
+## Design Tokens for Pagination
 
 | **Token**                                                | **Color for**              | **State/Meaning**  | **CSS Selector(s)**                                                                                                                                                          |
 | -------------------------------------------------------- | -------------------------- | ------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -87,7 +87,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Pagination API Reference
+## Pagination API Reference
 
 ### `<Pagination />`
 
