--- a/app/password-input/@spec/page.mdx
+++ b/app/password-input/@spec/page.mdx
@@ -217,7 +217,7 @@ The PasswordInput component toggles between masked and plaintext states using th
 - The visibility button is always present unless overridden at the Input level.
 - For accessibility and keyboard behaviors, see Input documentation.
 
-## 🎨 Design Tokens for PasswordInput
+## Design Tokens for PasswordInput
 
 | **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**       |
 | ---------------------------------------- | ---------------------------- | ----------------- | ------------------------- |
@@ -246,7 +246,7 @@ The PasswordInput component toggles between masked and plaintext states using th
 
 ---
 
-## 🧩 PasswordInput API Reference
+## PasswordInput API Reference
 
 ### `<PasswordInput />`
 
