--- a/app/pinfield/@spec/page.mdx
+++ b/app/pinfield/@spec/page.mdx
@@ -100,7 +100,7 @@ Custom separator characters can be specified for groups.
 - Optional callback when all fields are filled
 - Supports copy/paste of the entire code
 
-## 🧩 PinField API Reference
+## PinField API Reference
 
 ### `<PinField />`
 
@@ -125,7 +125,7 @@ Custom separator characters can be specified for groups.
 
 ---
 
-## 🎨 Design Tokens for PinField
+## Design Tokens for PinField
 
 | **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                    |
 | ---------------------------------------- | ---------------------------- | ----------------- | ------------------------------------------------------ |
