--- a/app/progress/@spec/page.mdx
+++ b/app/progress/@spec/page.mdx
@@ -49,7 +49,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Progress
+## Design Tokens for Progress
 
 | **Token**                                   | **Color for**                | **State/Meaning** | **CSS Selector(s)**                          |
 | ------------------------------------------- | ---------------------------- | ----------------- | -------------------------------------------- |
@@ -67,7 +67,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Progress API Reference
+## Progress API Reference
 
 ### `<Progress />`
 
