--- a/app/radio/@spec/page.mdx
+++ b/app/radio/@spec/page.mdx
@@ -68,7 +68,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | 2025-06-03 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Radio
+## Design Tokens for Radio
 
 | **Token**                           | **Color for**       | **State/Meaning** | **CSS Selector(s)**                                 |
 | ----------------------------------- | ------------------- | ----------------- | --------------------------------------------------- |
@@ -90,7 +90,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Radio API Reference
+## Radio API Reference
 
 ### `<Radio />`
 
