--- a/app/switch/@spec/page.mdx
+++ b/app/switch/@spec/page.mdx
@@ -117,7 +117,7 @@ An element that toggles between two binary options.
 
 > [!missing] Section is incomplete
 
-## 🎨 Design Tokens for Switch
+## Design Tokens for Switch
 
 | **Token**                                             | **Color for**           | **State/Meaning**  | **CSS Selector(s)**                                  |
 | ----------------------------------------------------- | ----------------------- | ------------------ | ---------------------------------------------------- |
@@ -140,7 +140,7 @@ An element that toggles between two binary options.
 
 ---
 
-## 🧩 Switch API Reference
+## Switch API Reference
 
 ### `<Switch />`
 
