--- a/app/table/@spec/page.mdx
+++ b/app/table/@spec/page.mdx
@@ -70,7 +70,7 @@ A component that organizes content into vertically stacked collapsible and expan
 - **Empty state**: Customizable empty state when no data.
 - **Keyboard navigation**: Standard table navigation (Tab, Arrow keys).
 
-## 🎨 Design Tokens for Table
+## Design Tokens for Table
 
 | **Token**                                         | **Color for**          | **State/Meaning** | **CSS Selector(s)**                                                                      |
 | ------------------------------------------------- | ---------------------- | ----------------- | ---------------------------------------------------------------------------------------- |
@@ -91,7 +91,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Table API Reference
+## Table API Reference
 
 ### `<Table />`
 
