--- a/app/tabs/@spec/page.mdx
+++ b/app/tabs/@spec/page.mdx
@@ -68,7 +68,7 @@ _See Accordion spec for accessibility/keyboard details._
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Tabs
+## Design Tokens for Tabs
 
 | **Token**                                  | **Color for**  | **State/Meaning**         | **CSS Selector(s)**    |
 | ------------------------------------------ | -------------- | ------------------------- | ---------------------- |
@@ -88,7 +88,7 @@ _See Accordion spec for accessibility/keyboard details._
 
 ---
 
-## 🧩 Tabs API Reference
+## Tabs API Reference
 
 ### `<Tabs />`
 
