--- a/app/tag/@spec/page.mdx
+++ b/app/tag/@spec/page.mdx
@@ -127,7 +127,7 @@ This sub-component has the same interaction states as [[Button]] except for the 
 | <kbd>Del</kbd> or <kbd>Backspace</kbd> | Container          | Removes the tag from the user interface.                                                                                                                                                          |
 | <kbd>Space</kbd> or <kbd>Enter</kbd>   | Remove button      | Removes the tag from the user interface.                                                                                                                                                          |
 
-## 🎨 Design Tokens for Tag
+## Design Tokens for Tag
 
 | **Token**                              | **Color for**            | **State/Meaning** | **CSS Selector(s)**            |
 | -------------------------------------- | ------------------------ | ----------------- | ------------------------------ |
@@ -149,7 +149,7 @@ This sub-component has the same interaction states as [[Button]] except for the 
 
 ---
 
-## 🧩 Tag API Reference
+## Tag API Reference
 
 ### `<Tag />`
 
