--- a/app/toast/@spec/page.mdx
+++ b/app/toast/@spec/page.mdx
@@ -70,7 +70,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | 2024-06-03 | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Toast
+## Design Tokens for Toast
 
 | **Token**                                            | **Color for**    | **State/Meaning**     | **CSS Selector(s)**                        |
 | ---------------------------------------------------- | ---------------- | --------------------- | ------------------------------------------ |
@@ -96,7 +96,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Toast API Reference
+## Toast API Reference
 
 ### `<Toast />`
 
