--- a/app/tooltip/@spec/page.mdx
+++ b/app/tooltip/@spec/page.mdx
@@ -74,7 +74,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Tooltip
+## Design Tokens for Tooltip
 
 | **Token**                          | **Color for**      | **State/Meaning** | **CSS Selector(s)** |
 | ---------------------------------- | ------------------ | ----------------- | ------------------- |
@@ -86,7 +86,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Tooltip API Reference
+## Tooltip API Reference
 
 ### `<Tooltip />`
 
