--- a/app/checkbox/@spec/page.mdx
+++ b/app/checkbox/@spec/page.mdx
@@ -49,7 +49,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Checkbox
+## Design Tokens for Checkbox
 
 | **Token**                                            | **Color for**                  | **State/Meaning**             | **CSS Selector(s)**                    |
 | ---------------------------------------------------- | ------------------------------ | ----------------------------- | -------------------------------------- |
@@ -68,7 +68,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Checkbox API Reference
+## Checkbox API Reference
 
 ### `<Checkbox />`
 
