--- a/app/chip/@spec/page.mdx
+++ b/app/chip/@spec/page.mdx
@@ -122,7 +122,7 @@ An interactive element used for triggering actions, making selections, or filter
 
 ## Behaviors
 
-## 🎨 Design Tokens for Chip
+## Design Tokens for Chip
 
 | **Token**                                                         | **Color for**   | **State/Meaning**                                               | **CSS Selector(s)** |
 | ----------------------------------------------------------------- | --------------- | --------------------------------------------------------------- | ------------------- |
@@ -135,7 +135,7 @@ An interactive element used for triggering actions, making selections, or filter
 
 ---
 
-## 🧩 Chip API Reference
+## Chip API Reference
 
 ### `<Chip />`
 
