--- a/app/content-navigation/@spec/page.mdx
+++ b/app/content-navigation/@spec/page.mdx
@@ -74,7 +74,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for ContentNavigation
+## Design Tokens for ContentNavigation
 
 | **Token**                                                | **Color for**         | **State/Meaning**       | **CSS Selector(s)**                                                  |
 | -------------------------------------------------------- | --------------------- | ----------------------- | -------------------------------------------------------------------- |
@@ -90,7 +90,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 ContentNavigation API Reference
+## ContentNavigation API Reference
 
 ### `<ContentNavigation />`
 
