--- a/app/inline-link/@spec/page.mdx
+++ b/app/inline-link/@spec/page.mdx
@@ -49,7 +49,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for InlineLink
+## Design Tokens for InlineLink
 
 | **Token**                             | **Color for** | **State/Meaning** | **CSS Selector(s)**            |
 | ------------------------------------- | ------------- | ----------------- | ------------------------------ |
@@ -68,7 +68,7 @@ _InlineLink may also inherit some tokens from Button or Text components for typo
 
 ---
 
-## 🧩 InlineLink API Reference
+## InlineLink API Reference
 
 ### `<InlineLink />`
 
