--- a/app/search-input/@spec/page.mdx
+++ b/app/search-input/@spec/page.mdx
@@ -49,7 +49,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for SearchInput
+## Design Tokens for SearchInput
 
 | **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                   |
 | ---------------------------------------- | ---------------------------- | ----------------- | --------------------------------------------------------------------- |
@@ -78,7 +78,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 SearchInput API Reference
+## SearchInput API Reference
 
 ### `<SearchInput />`
 
