--- a/app/select/@spec/page.mdx
+++ b/app/select/@spec/page.mdx
@@ -221,7 +221,7 @@ The dropdown menu sub-component inherits all available options of the [[Menu#Opt
 
 > [!missing] Section is incomplete
 
-## 🎨 Design Tokens for Select
+## Design Tokens for Select
 
 | **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                             |
 | ---------------------------------------- | ---------------------------- | ----------------- | ------------------------------------------------------------------------------- |
@@ -250,7 +250,7 @@ The dropdown menu sub-component inherits all available options of the [[Menu#Opt
 
 ---
 
-## 🧩 Select API Reference
+## Select API Reference
 
 ### `<Select />`
 
