--- a/app/slider/@spec/page.mdx
+++ b/app/slider/@spec/page.mdx
@@ -79,7 +79,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Slider
+## Design Tokens for Slider
 
 | **Token**                                            | **Color for**             | **State/Meaning** | **CSS Selector(s)**                                                                      |
 | ---------------------------------------------------- | ------------------------- | ----------------- | ---------------------------------------------------------------------------------------- |
@@ -97,7 +97,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Slider API Reference
+## Slider API Reference
 
 ### `<Slider />`
 
