--- a/app/spinner/@spec/page.mdx
+++ b/app/spinner/@spec/page.mdx
@@ -59,7 +59,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Spinner
+## Design Tokens for Spinner
 
 | **Token**                                        | **Color for**      | **State/Meaning** | **CSS Selector(s)** |
 | ------------------------------------------------ | ------------------ | ----------------- | ------------------- |
@@ -71,7 +71,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 Spinner API Reference
+## Spinner API Reference
 
 ### `<Spinner />`
 
