--- a/app/text-input/@spec/page.mdx
+++ b/app/text-input/@spec/page.mdx
@@ -162,7 +162,7 @@ This sub-component has the same states as [[Button]].
 
 > [!missing] Section is incomplete
 
-## 🎨 Design Tokens for TextInput
+## Design Tokens for TextInput
 
 | **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                                 |
 | ---------------------------------------- | ---------------------------- | ----------------- | ----------------------------------------------------------------------------------- |
@@ -191,7 +191,7 @@ This sub-component has the same states as [[Button]].
 
 ---
 
-## 🧩 TextInput API Reference
+## TextInput API Reference
 
 ### `<TextInput />`
 
