--- a/app/textarea/@spec/page.mdx
+++ b/app/textarea/@spec/page.mdx
@@ -49,7 +49,7 @@ A multi-line text input field for entering and editing longer blocks of text.
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for Textarea
+## Design Tokens for Textarea
 
 | **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**            |
 | ---------------------------------------- | ---------------------------- | ----------------- | ------------------------------ |
@@ -78,7 +78,7 @@ A multi-line text input field for entering and editing longer blocks of text.
 
 ---
 
-## 🧩 Textarea API Reference
+## Textarea API Reference
 
 ### `<Textarea />`
 
