--- a/app/tree-navigation/@spec/page.mdx
+++ b/app/tree-navigation/@spec/page.mdx
@@ -49,7 +49,7 @@ A component that organizes content into vertically stacked collapsible and expan
 | :--------- | :------------------------------------------------------- | -------------- | :---------- | :------------------ |
 | YYYY-MM-DD | <Badge size='sm' kind='glass' color='cyan' label="new"/> | Initial design | Oanh Nguyen | PAR-52              |
 
-## 🎨 Design Tokens for TreeNavigation
+## Design Tokens for TreeNavigation
 
 | **Token**                                                        | **Color for**                    | **State/Meaning**  | **CSS Selector(s)**                                            |
 | ---------------------------------------------------------------- | -------------------------------- | ------------------ | -------------------------------------------------------------- |
@@ -72,7 +72,7 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ---
 
-## 🧩 TreeNavigation API Reference
+## TreeNavigation API Reference
 
 ### `<TreeNavigation />`
 
